fix gap clientWrapper.

--- a/styles/Wrapper.module.scss
+++ b/styles/Wrapper.module.scss
@@ -38,7 +38,7 @@
 	justify-content: space-between;
 	overflow-y: visible;
 	z-index: 9;
-	gap: 0.8rem;
+	gap: 1.5rem;
 }
 
 @media only screen and (min-width: 1000px) {
